Full conversion to Kotlin
-Complete conversion to Kotlin code
-Begin implementation of Jetpack Compose

--- a/app/src/main/res/layout/fragment_character_page.xml
+++ b/app/src/main/res/layout/fragment_character_page.xml
@@ -27,14 +27,13 @@
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical">
 
-                    <TextView
+                    <androidx.compose.ui.platform.ComposeView
                         android:id="@+id/nameText"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/nameText"
-                        android:textSize="20sp" />
+                        android:layout_height="wrap_content" />
 
                     <EditText
                         android:id="@+id/charNameEntry"
@@ -49,7 +48,8 @@
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical">
 
                     <TextView
                         android:id="@+id/classText"
@@ -68,7 +68,8 @@
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical">
 
                     <TextView
                         android:id="@+id/raceText"
@@ -86,7 +87,8 @@
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical">
 
                     <TextView
                         android:id="@+id/textView"
