Double Check Rules up to Psychic
-implement gendered boon selection for duk'zarits
-implement options for paladin and dark paladin
-implement weaponmaster special ability
-implement freelancer secondary characteristic selection
-implement character's movement value, weight index, and gnosis
-implement display for bonus wealth
-implement innate magic limit
-implement limits to psychic and magic projections
-implement zero level bonus value evaluations
-implement magic and psychic style modules

--- a/app/src/main/res/values/inventoryStrings.xml
+++ b/app/src/main/res/values/inventoryStrings.xml
@@ -10,6 +10,7 @@
     <string name = "artAndDecorLabel">Art and Decor</string>
     <string name = "gemLabel">Gems</string>
     <string name = "paintingLabel">Paintings</string>
+    <string name = "poisonLabel">Poisons</string>
     <string name = "miscLabel">Miscellaneous</string>
     <string name = "weaponsLabel">Arms and Weapons</string>
     <string name = "armorsLabel">Armor</string>
@@ -21,4 +22,6 @@
     <string name = "maxGoldLabel">Gold Max: </string>
     <string name = "maxSilverLabel">Silver Max: </string>
     <string name = "maxCopperLabel">Copper Max: </string>
+
+    <string name = "bonusWealthLabel">Bonus Wealth: </string>
 </resources>
