--- a/app/src/main/res/values/magicFragmentStrings.xml
+++ b/app/src/main/res/values/magicFragmentStrings.xml
@@ -7,6 +7,7 @@
     <string name = "zeonPointMultiplier">x 5</string>
 
     <string name = "zeonRecoveryLabel">Zeon Recovery: </string>
+    <string name = "innateMagic">Innate Magic: </string>
     <string name = "imbalanceLabel">Projection Imbalance: </string>
 
     <string name = "offenseLabel">Offense: </string>
