Implement Missed Uses of Psychic Points
-implement purchasing of psychic potential, power potential, and innate slots with psychic points

--- a/app/src/main/res/values/psychicStrings.xml
+++ b/app/src/main/res/values/psychicStrings.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name = "psyPointLabel">Psychic Points</string>
+    <string name = "pointsInPotential">Psychic Points in Potential: </string>
     <string name = "psyProjectionLabel">Psychic Projection</string>
     <string name = "psyPotentialLabel">Psychic Potential: </string>
     <string name = "freePsyPointLabel">Free Psychic Points: </string>
+    <string name = "innateSlotLabel">Innate Slots: </string>
 
     <string name = "telepathyLabel">Telepathy</string>
     <string name = "kinesisLabel">Psychokinesis</string>
