Arrange Secondaries and Advantages
-arrange secondary fragment items
-arrange advantage fragment items
-make creation point indicator not scroll
-make dropdown items in character secondary fragments read-only

--- a/app/src/main/res/values/advantageStrings.xml
+++ b/app/src/main/res/values/advantageStrings.xml
@@ -6,4 +6,6 @@
     <string name = "magicDisadv">Magic Disadvantages</string>
     <string name = "psychicAdv">Psychic Advantages</string>
     <string name = "psychicDisadv">Psychic Disadvantages</string>
+
+    <string name = "heldAdvantageLabel">Held Advantages/Disadvantages</string>
 </resources>
