Arrange Equipment and Refactor Detail Alert
-arrange items in the equipment menu
-changed how detail alert retrieves display composable
-fixed running viewModel refresh function on displaying detail item
-reworked viewModels to not require a context item

--- a/app/src/main/res/values/inventoryStrings.xml
+++ b/app/src/main/res/values/inventoryStrings.xml
@@ -24,4 +24,6 @@
     <string name = "maxCopperLabel">Copper Max: </string>
 
     <string name = "bonusWealthLabel">Bonus Wealth: </string>
+
+    <string name = "inventoryHeader">Inventory</string>
 </resources>
