Arrange Detail Alert
-arrange detail alert composables
-alter DialogFrame to fit for detail alert composable

--- a/app/src/main/res/values/magicFragmentStrings.xml
+++ b/app/src/main/res/values/magicFragmentStrings.xml
@@ -34,7 +34,7 @@
     <string name = "elementLabel">Element: </string>
     <string name = "zeonCostLabel">Zeon Cost: </string>
     <string name = "addedEffectLabel">Added Effect: </string>
-    <string name = "maxZeonLabel">Maximum Zeon: Intelligence x </string>
+    <string name = "maxZeonLabel">Maximum Zeon:  </string>
     <string name = "typeLabel">Type: </string>
     <string name = "forbiddenLabel">Forbidden Elements: </string>
 </resources>
