Implement Focus DP Display
-implement development point cost displays for NumberInput items that have an associated cost
-implement rules record object for future use
-implement main title
-remove action bar from main activity
-fix error with field aptitude advantage
-organize some string resources

--- a/app/src/main/res/values/secondaryCharacteristicNames.xml
+++ b/app/src/main/res/values/secondaryCharacteristicNames.xml
@@ -57,7 +57,8 @@
         <item>Sleight of Hand</item>
     </string-array>
 
-
+    <string name = "natNotTaken">+ 0</string>
+    <string name = "natTaken">+ 5</string>
 
     <string name = "freelancerPrompt">Select Freelancer\'s Bonuses: </string>
 </resources>
