Implement Equipment Saving Refactor
-change how equipment items are saved
-set app icon
-set enumeration string resources
-implement API differences for inventory section

--- a/app/src/main/res/values/mainPageStrings.xml
+++ b/app/src/main/res/values/mainPageStrings.xml
@@ -13,4 +13,7 @@
 
     <string name = "newButtonConfirm">Create</string>
     <string name = "loadButtonConfirm">Load</string>
+
+    <string name = "failedLoadTitle">Failed to Load Character</string>
+    <string name = "failedLoadText">Something went wrong when loading your file. If your data sharing has been turned on, a report has been sent.</string>
 </resources>
