Refactor Technique Data
-update techniques to utilize string resources
-fix error made in adjustable cost for predetermination and special requirements: determined cost
-refactor ki abilities to separate techniques into prebuilt and custom techs instead of individual levels of techniques

--- a/app/src/main/res/values/customTechStrings.xml
+++ b/app/src/main/res/values/customTechStrings.xml
@@ -38,7 +38,7 @@
     <string name = "effectHeader">Effect</string>
     <string name = "mirageHeader">Mirages</string>
 
-    <string name = "optionalHeader">Optional Header: %s</string>
+    <string name = "optionalHeader">Optional Advantage: %s</string>
     <string name = "sacrificeHeader">Sacrifice</string>
     <string name = "continuousAttackHeader">Continuous Attack</string>
     <string name = "fatigueBonusHeader">Added Fatigue Bonus</string>
