Advantage Option Refactor
-refactor addition of Half-Tree Attuned advantage to work as needed
-refactor advantage options to be string array resource references
-begin internal reorganization

--- a/app/src/main/res/values/advantageStrings.xml
+++ b/app/src/main/res/values/advantageStrings.xml
@@ -12,5 +12,7 @@
     <string name = "heldAdvantageLabel">Held Advantages/Disadvantages</string>
     <string name = "racialAdvantageLabel">Racial Advantages</string>
 
+    <string name = "advantageSelectPrompt">Select Items for Advantage</string>
+
     <string name = "giftWarning">Removing The Gift will remove any magic investments made. Proceed?</string>
 </resources>
