Power Effect Table Refactor
-update detail alert's method of displaying a psychic power's difficulty table
-change psychic power to utilize string resource items

--- a/app/src/main/res/values/psychicStrings.xml
+++ b/app/src/main/res/values/psychicStrings.xml
@@ -23,7 +23,7 @@
     <string-array name = "difficultyTable">
         <item>Routine (20)</item>
         <item>Easy (40)</item>
-        <item>Medium (80)</item>
+        <item>Moderate (80)</item>
         <item>Difficult (120)</item>
         <item>Very Difficult (140)</item>
         <item>Absurd (180)</item>
