Card Object Holder Implementation
-implement Card objects to better organize fragments
-import material3 color scheme and theme

--- a/app/src/main/res/values/psychicStrings.xml
+++ b/app/src/main/res/values/psychicStrings.xml
@@ -19,6 +19,7 @@
     </string-array>
 
     <string name = "potentialBonusLabel">+%1d Potential</string>
+    <string name = "psyPointInput">%1d PP</string>
 
     <string-array name = "difficultyTable">
         <item>Routine (20)</item>
